--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,7 @@ repos:
   rev: 3.9.2
   hooks:
   - id: flake8
+    args: ["--ignore=E501"]
 - repo: https://github.com/kynan/nbstripout
   rev: 0.5.0
   hooks:
